# client_mining_agent

./: .dockerignore  .env.example  .gitignore  .importlinter  CLAUDE.md  DEPLOY.md  Dockerfile  pyproject.toml
.claude/: claude-security-guidance.md  security-patterns.json
miniprogram/: app.js  app.json  app.wxss  package-lock.json  package.json  project.config.json
miniprogram/custom-tab-bar/: index.js  index.wxml  index.wxss
miniprogram/pages/campaign/: campaign.js  campaign.json  campaign.wxml  campaign.wxss
miniprogram/pages/chat/: chat.js  chat.json  chat.wxml  chat.wxss
miniprogram/pages/leads/: leads.js  leads.json  leads.wxml  leads.wxss
miniprogram/pages/products/: products.js  products.json  products.wxml  products.wxss
miniprogram/pages/profile/: profile.js  profile.json  profile.wxml  profile.wxss
miniprogram/utils/: api.js  catalog.js  profile.js
src/leadfinder/: __init__.py  api.py  cli.py  outreach.py  pipeline.py  skills.py
src/leadfinder/config/: __init__.py  africa_business.py  bwa.py  keywords.py  scoring.py
src/leadfinder/domain/: __init__.py  enums.py  models.py  protocols.py
src/leadfinder/infra/: __init__.py  email_data.py  email_extract.py  email_send.py  email_verify.py  http.py  llm.py  writers.py  wx_auth.py
src/leadfinder/stages/: enrich.py  (+4 more)
tests/: test_africa_business.py  test_api.py  test_bwa_source.py  test_classify.py  test_contracts.py  test_email_send.py  test_enrich.py  test_http.py  test_llm.py  test_outreach.py  test_pipeline.py  test_score.py  test_skills.py  test_verify.py  test_writers.py  test_wx_auth.py
(+4 files in other folders)
