[project]
name = "leadfinder"
version = "0.1.0"
description = "B2B 客源搜索 — mine overseas skincare buyers from public directories"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "dnspython>=2.4",
    "openpyxl>=3.1",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12",
    "mypy>=1.17",
    "pytest>=8.0",
    "import-linter>=2.0",
]
api = ["fastapi>=0.110", "uvicorn>=0.29"]

[project.scripts]
leadfinder = "leadfinder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leadfinder"]

[tool.ruff]
line-length = 100
# v1 flat prototype is reference-only; excluded until migrated into src/leadfinder/.
extend-exclude = ["run.py", "collect.py", "detail.py", "enrich.py", "classify.py",
                  "validate.py", "score.py", "output.py", "config.py", "http_client.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
strict = true
plugins = ["pydantic.mypy"]

# I/O libs without strict-friendly stubs — treat as untyped to keep `strict` clean.
[[tool.mypy.overrides]]
module = ["bs4", "bs4.*", "openpyxl", "openpyxl.*", "dns", "dns.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
